# turing-chat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  a.out  backend.py  client.py  mainserver.py  requirements.txt  rsa.c  rsa.cpp  rsa.h  rsa.py  rsaBackend.py  rsamodule.c  rsamodule.cpp  server.py  settings.py  setup.py  test.py  tests.cpp
.github/workflows/: pythonapp.yml
backend/: backend.py
backend/rsa/: CMakeLists.txt
backend/rsa/src/: rsamodule.cpp
js/: index.js  package-lock.json  package.json
rsa/: rsamodule.cpp  setup.py
rsa/include/: rsa.h
rsa/src/: rsa.cpp
src/: api.py  backend.py  cli.py  client.py  connexion.py  gui.py  io_manager.py  mainserver.py  parsing.py  rsa_key.py  sample.py  server.py  settings.py  test_input.py  translate.py  trust.py  trust_manager.py  turing_chat.py
src/pytest/: test_backend.py  test_client.py  test_rsa.py  test_rsaKey.py  test_turingChat.py
src/tests/: tests_backend.py  tests_rsaKey.py
src/translations/: en.yaml  fr.yaml
